Fix for domify return signature change.

--- a/example/color-table/index.html
+++ b/example/color-table/index.html
@@ -91,7 +91,7 @@
         '    <div class="badge">'+color.name+'</div>',
         '  </div>',
         '</div>'
-      ].join('')))
+      ].join(''))[0])
     }
 
     render(allColors)
